lib/src/compiler/tests/testdata/errors/137.out
error[E001]: syntax error
 --> line:3:13
  |
3 |      uint16(,0) == 0
  |             ^ expecting expression, identifier or `)`, found `,`